<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllStarXI</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="connect_with_twitter">Connect With Twitter</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="already_have_account">Already Have An Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_setup">ProfileSetupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_change">CHANGE</string>
    <string name="username">USERNAME</string>
    <string name="username_hint">username</string>
    <string name="team_name">TEAM NAME</string>
    <string name="teamname_hint">TEAM NAME</string>
    <string name="favorite_team">FAVORITE TEAM</string>
    <string name="favorite_team_hint">Favorite Team</string>
    <string name="title_activity_favorite_team">FavoriteTeamActivity</string>
    <string name="title_activity_email_sign_up">EmailSignUpActivity</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="email_address_hint">email</string>
    <string name="insert_password_hint">insert password</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="repeat_password_hint">repeat password</string>
    <string name="title_activity_auto_draft_step1">AutoDraftStep1Activity</string>
    <string name="autodraft_prediction_text">Predict at least 4 results among the upcoming games:</string>
    <string name="autodraft_prediction_supporting_text">(tap on the team names to set a WIN)</string>
    <string name="title_activity_auto_draft_step2">AutoDraftStep2Activity</string>
    <string name="title_activity_auto_draft_step3">AutoDraftStep3Activity</string>
    <string name="title_activity_team_page">TeamPageActivity</string>
    <string name="title_activity_transfers">TransfersActivity</string>
    <string name="title_activity_leagues">LeaguesActivity</string>
    <string name="title_activity_fixtures">FixturesActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auto_draft_step4">AutoDraftStep4Activity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My Team</item>
        <item>My Profile</item>
        <item>Transfers</item>
        <item>Leagues</item>
        <item>Shop</item>
        <item>Matches</item>
        <item>Rankings</item>
        <item>Settings</item>
        <item>Last Round Score</item>
        <item>Next Round In</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_team_page_with_drawer">TeamPageWithDrawerActivity</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="header_branding">Header Branding</string>
    <string name="general_content_description">GeneralContentDescription</string>
    <string name="header_btn_edit">Edit</string>
    <string name="title_activity_new_start">NewStartActivity</string>

</resources>
