<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.allstarxi.app.StartScreenActivity">

    <Button
        android:id="@+id/connect_facebook_button"
        android:text="@string/connect_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/connect_twitter_button"
        android:text="@string/connect_with_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/connect_email_button"
        android:text="@string/sign_up_with_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/have_account_button"
        android:text="@string/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
