<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_screens">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/header_branding"
            style="@style/font_fancied_orange"
            android:id="@+id/tvAppName"
            android:layout_centerInParent="true"
            android:gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibSlider"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_header_slider"
            android:background="@color/transparent"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/side_margin"
            android:contentDescription="@string/general_content_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibMessage"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_header_email"
            android:background="@color/transparent"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/general_content_description"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:id="@+id/btnEdit"
            android:text="@string/header_btn_edit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:background="@drawable/bg_btn_round"
            style="@style/font_size_normal"
            android:textColor="@color/font_list_matches"
            android:layout_marginRight="5dp"/>

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/pbLoading"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_toRightOf="@+id/tvAppName"
            android:layout_toLeftOf="@+id/ibMessage"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_gradient_divider"  />

</LinearLayout>